[gd_scene load_steps=15 format=3 uid="uid://cb6m1sjbf1232"]

[ext_resource type="Script" uid="uid://o801vurq62ic" path="res://src/scripts/tile.gd" id="1_3cgyk"]
[ext_resource type="Texture2D" uid="uid://canl870weld46" path="res://src/tiles/hex_grid.png" id="1_33s04"]
[ext_resource type="Shader" uid="uid://di1w5mdv4gsau" path="res://src/shaders/fake_3d.gdshader" id="1_cijmj"]
[ext_resource type="Script" uid="uid://dq6lv7610aeey" path="res://src/scripts/tileItself.gd" id="1_lvqq3"]
[ext_resource type="Shader" uid="uid://cms6oig8lmx3k" path="res://src/scenes/disolve_shader.gdshader" id="2_4jn14"]
[ext_resource type="FontFile" uid="uid://jrdb2urrngxx" path="res://src/fonts/ARCADECLASSIC.TTF" id="5_6br8n"]
[ext_resource type="AudioStream" uid="uid://ddag0jreql1lf" path="res://src/sounds/key.wav" id="5_h3bi2"]
[ext_resource type="AudioStream" uid="uid://gmp628x2naxa" path="res://src/sounds/Click-Sound-Effect-_HD_.wav" id="5_masbt"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_cijmj"]
shader = ExtResource("1_cijmj")
shader_parameter/rect_size = Vector2(110, 96)
shader_parameter/fov = 90.0
shader_parameter/cull_back = true
shader_parameter/y_rot = 0.0
shader_parameter/x_rot = 0.0
shader_parameter/inset = 0.0

[sub_resource type="FastNoiseLite" id="FastNoiseLite_4jn14"]
frequency = 0.0087
offset = Vector3(-51.28, 25.64, 0)

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_egj24"]
noise = SubResource("FastNoiseLite_4jn14")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_3cgyk"]
shader = ExtResource("2_4jn14")
shader_parameter/dissolve_texture = SubResource("NoiseTexture2D_egj24")
shader_parameter/dissolve_value = 1.0

[sub_resource type="AtlasTexture" id="AtlasTexture_cijmj"]
atlas = ExtResource("1_33s04")
region = Rect2(265, 8, 110, 96)

[sub_resource type="SpriteFrames" id="SpriteFrames_3cgyk"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_cijmj")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="Node2D" type="Node2D"]
script = ExtResource("1_lvqq3")

[node name="Button" type="Button" parent="."]
custom_minimum_size = Vector2(70, 70)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -35.0
offset_top = -35.0
offset_right = 35.0
offset_bottom = 35.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_3cgyk")
metadata/_edit_use_anchors_ = true

[node name="SubViewportContainer" type="SubViewportContainer" parent="Button"]
material = SubResource("ShaderMaterial_cijmj")
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -55.0
offset_top = -48.0
offset_right = 55.0
offset_bottom = 48.0
grow_horizontal = 2
grow_vertical = 2

[node name="SubViewport" type="SubViewport" parent="Button/SubViewportContainer"]
transparent_bg = true
handle_input_locally = false
size = Vector2i(110, 96)
render_target_update_mode = 4

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Button/SubViewportContainer/SubViewport"]
material = SubResource("ShaderMaterial_3cgyk")
position = Vector2(55, 48)
sprite_frames = SubResource("SpriteFrames_3cgyk")

[node name="Label" type="Label" parent="Button/SubViewportContainer/SubViewport"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -33.0
offset_top = -27.5
offset_right = 33.0
offset_bottom = 27.5
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(33, 27)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 7
theme_override_fonts/font = ExtResource("5_6br8n")
theme_override_font_sizes/font_size = 35
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 1

[node name="AudioMovement" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_masbt")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_h3bi2")
volume_db = 0.242
pitch_scale = 2.02
max_distance = 472.0
attenuation = 3.605

[connection signal="button_down" from="Button" to="Button" method="_on_button_down"]
[connection signal="button_up" from="Button" to="Button" method="_on_button_up"]
[connection signal="gui_input" from="Button" to="Button" method="_on_gui_input"]
[connection signal="mouse_entered" from="Button" to="Button" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Button" to="Button" method="_on_mouse_exited"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="gui_input" from="Button/SubViewportContainer" to="." method="_on_sub_viewport_container_gui_input"]
